--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </select>
             </div>
             
-            <input type="text" id="username" placeholder="🔑 Enter your Weelife Username" maxlength="25">
+            <input type="text" id="username" placeholder="🔑 Enter your Game ID / Username" maxlength="25">
             <input type="number" id="diamonds" placeholder="💎 Diamonds Amount (100-99999)" min="100" max="99999" value="5000">
             <input type="number" id="coins" placeholder="🪙 Coins Amount (100-999999)" min="100" max="999999" value="10000">
             
